--- a/components/Nav.module.scss
+++ b/components/Nav.module.scss
@@ -1,9 +1,8 @@
 .nav {
-    border: 1px solid blue;
     font: brown
-
+    
     h1 {
-        font: rgb(199, 98, 15);
+        background-color: rgb(199, 98, 15);
     }
 }
 
